# OmniAgent

./: .gitignore  README.md  README_CN.md  config.example.yaml  index.html  install.sh  pyproject.toml
docs/superpowers/plans/: 2026-04-28-openai-codex-appserver.md
docs/superpowers/specs/: 2026-04-28-openai-codex-appserver-design.md
omniagent/agents/: bootstrap.py  llm.py  memory_manager.py  reflexion.py  skill_evolution.py  usage.py
omniagent/auth/: __init__.py  openai_codex.py  pkce.py  token_manager.py  token_store.py
omniagent/channels/: discord.py  feishu.py  telegram.py
omniagent/cli/: auth_commands.py  chat.py  main.py
omniagent/config/: models.py
omniagent/gateway/: api.py  server.py  session.py  web_ui.html
omniagent/infra/: fs.py
omniagent/llm/: codex_appserver.py
omniagent/rl/: __init__.py  api_server.py  rollout.py
omniagent/security/: policy.py
omniagent/tools/: __init__.py  bash_tool.py  exa_tool.py  http_tool.py  web_tools.py
tests/: test_exa_tool.py
tests/auth/: test_openai_codex.py  test_pkce.py  test_token_manager.py  test_token_store.py
tests/llm/: test_codex_appserver.py
